--- a/src/uLearn.Web/Views/Home/Index.cshtml
+++ b/src/uLearn.Web/Views/Home/Index.cshtml
@@ -10,8 +10,8 @@
 			<div class="clearfix"></div>
 		</div>
 
-		<div class="row">
-			<div class="course-tile col-md-6">
+		<div class="courses-grid">
+			<div class="course-tile">
 				<h2>Основы программирования на примере C#. Часть 1</h2>
 				<p>
 					Длительность курса: 1 семестр, 3&ndash;6 часов в неделю.
@@ -24,7 +24,12 @@
 				</p>
 				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "BasicProgramming" }, new { @class = "btn btn-primary" })</p>
 			</div>
-			<div class="course-tile col-md-6">
+			<div class="course-tile">
+				<a target="_blank" href="https://kontur.ru/education/programs/kampus/2019ekb">
+					<img class="banner" alt="Лагерь для разработчиков на C#" src="~/Content/banner-campus-2019.png" width="100%"/>
+				</a>
+			</div>
+			<div class="course-tile">
 				<h2>Основы программирования на примере C#. Часть 2</h2>
 				<p>Длительность курса: 1 семестр, 3&ndash;6 часов в неделю.</p>
 				<p>
@@ -38,9 +43,7 @@
 				</p>
 				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "BasicProgramming2" }, new { @class = "btn btn-primary" })</p>
 			</div>
-		</div>
-		<div class="row">
-			<div class="course-tile col-md-6">
+			<div class="course-tile">
 				<h2>
 					Проектирование <nobr>на языке C#</nobr>
 				</h2>
@@ -55,7 +58,7 @@
 				</p>
 				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "CS2" }, new { @class = "btn btn-primary" })</p>
 			</div>
-			<div class="course-tile col-md-6">
+			<div class="course-tile">
 				<h2>Основы компьютерной безопасности</h2>
 				<p>Длительность: 1 семестр, 2–6 часов в неделю</p>
 				<p>
@@ -64,9 +67,7 @@
 				</p>
 				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "Hackerdom" }, new { @class = "btn btn-primary" })</p>
 			</div>
-		</div>
-		<div class="row">
-			<div class="course-tile col-md-6">
+			<div class="course-tile">
 				<h2>Практикум по языку запросов LINQ</h2>
 				<p>
 				Длительность миникурса: 2&ndash;4 часа.
@@ -86,7 +87,7 @@
 				</p>
 				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "Linq" }, new { @class = "btn btn-primary" })</p>
 			</div>
-			<div class="course-tile col-md-6">
+			<div class="course-tile">
 				<h2>
 					Тестирование&nbsp;ПО
 				</h2>
@@ -99,9 +100,7 @@
 				</p>
 				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "Testing" }, new { @class = "btn btn-primary" })</p>
 			</div>
-		</div>
-		<div class="row">
-			<div class="course-tile col-md-6">
+			<div class="course-tile">
 				<h2>Оценка сложности алгоритмов</h2>
 				<p>
 				Длительность миникурса: 2 часа.
@@ -116,7 +115,7 @@
 				</p>
 				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "complexity" }, new { @class = "btn btn-primary" })</p>
 			</div>
-			<div class="course-tile col-md-6">
+			<div class="course-tile">
 				<h2>Введение в математику</h2>
 				<p>Длительность: 7 тем, 3&ndash;5 часов на тему</p>
 				<p>
@@ -132,9 +131,7 @@
 				</p>
 				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "math" }, new { @class = "btn btn-primary" })</p>
 			</div>
-		</div>
-		<div class="row">
-			<div class="course-tile col-md-6">
+			<div class="course-tile">
 				<h2>Компьютерные сети</h2>
 				<p>Длительность: 1 семестр, 2&ndash;4 часа в неделю</p>
 				<p>
@@ -144,7 +141,7 @@
 				</p>
 				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "Networks" }, new { @class = "btn btn-primary" })</p>
 			</div>
-			<div class="course-tile col-md-6">
+			<div class="course-tile">
 				<h2>The Clean Code Game</h2>
 				<p>Длительность: 10–20 минут</p>
 				<p>
