banner-campus-2019 update link

--- a/src/uLearn.Web/Views/Home/Index.cshtml
+++ b/src/uLearn.Web/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
 				<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "BasicProgramming" }, new { @class = "btn btn-primary" })</p>
 			</div>
 			<div class="course-tile">
-				<a target="_blank" href="https://kontur.ru/education/programs/kampus/2019ekb">
+				<a target="_blank" href="https://kontur.ru/education/programs/kampus/2019ekb?utm_source=ulearn&utm_medium=banner&utm_campaign=2019_2_kampus">
 					<img class="banner" alt="Лагерь для разработчиков на C#" src="~/Content/banner-campus-2019.png" width="100%"/>
 				</a>
 			</div>
