--- a/src/Frontend/src/components/comments/Comment/Comment.less
+++ b/src/Frontend/src/components/comments/Comment/Comment.less
@@ -14,7 +14,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  width: inherit;
+  width: calc(100% - 50px);
   margin-left: 10px;
   word-wrap: break-word;
 }
@@ -25,7 +25,7 @@
   font-size: 14px;
   cursor: default;
 
-  @media(max-width: @maxPhoneWidth) {
+  @media (max-width: @maxPhoneWidth) {
     margin-top: 0;
   }
 }
@@ -38,7 +38,7 @@
   width: 95%;
   word-wrap: break-word;
 
-  @media(max-width: @maxPhoneWidth) {
+  @media (max-width: @maxPhoneWidth) {
     margin: 0;
   }
 }
