--- a/src/Frontend/src/components/comments/Comment/Header/Header.less
+++ b/src/Frontend/src/components/comments/Comment/Header/Header.less
@@ -4,22 +4,25 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  width: inherit;
+  width: 100%;
   align-items: baseline;
 
   > a {
-    flex: 0 0 auto;
-
-    @media (max-width: @maxPhoneWidth) {
-      flex-basis: 50px;
-    }
+    flex: 0 1 auto;
+    overflow: hidden;
   }
 }
 
 .author {
+  height: 50px;
+
   flex: 0 0 auto;
   font-size: 16px;
   margin: 0 5px 0 0;
+
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 
   @media (max-width: @maxPhoneWidth) {
     font-size: 16px;
