Refactor restyling for wide  monitor
removed content diveder, refactored navigation/course styles.
added rootWrapper to add gray background color

--- a/src/Frontend/src/components/comments/Comment/Comment.less
+++ b/src/Frontend/src/components/comments/Comment/Comment.less
@@ -59,7 +59,7 @@
 
 .commentAnchor {
   position: absolute;
-  top: -(@headerHeight + @headerDivider);
+  top: -(@headerHeight);
 }
 
 .isNotApproved {
