Review refactor: code + styles
-moved const to function in slide-video.js
-using dataset instead of getAttribute
-moved header logo to left, so now it's on same vertical line with course name in navigation
-added mobile style optimnization (no box shadow on rootWrapper if mobile)
-scroll bar now only in content zone ( was on all page )

--- a/src/Frontend/src/components/course/Course/Course.less
+++ b/src/Frontend/src/components/course/Course/Course.less
@@ -6,14 +6,13 @@
 @maxPageWrapperWidth: calc(@maxContentWidth - @maxNavigationMenuWidth);
 
 .rootWrapper {
-  background-color: @backgroundGray;
-  min-height: calc(100vh - @headerHeight);
+  height: calc(100vh - 50px);
+  overflow: auto;
 }
 
 .root {
   display: flex;
   max-width: @maxContentWidth;
-  box-shadow: 0 0 7px 1px #ccc;
 }
 
 .pageWrapper {
@@ -42,6 +41,7 @@
 @media (min-width: @maxPhoneWidth) {
   .pageWrapper {
     padding-top: 28px;
+    max-width: calc(100vw - @navigationMenuWidth);
   }
 }
 
@@ -49,11 +49,16 @@
   .pageWrapper {
     padding-left: @pageWrapperLaptopLeftPadding;
     padding-top: @pageWrapperLaptopTopPadding;
+    max-width: calc(100vw - @maxNavigationMenuWidth);
   }
 }
 
 @media (min-width: @maxContentWidth) {
+  .rootWrapper{
+    background-color: @backgroundGray;
+  }
   .root {
     margin-left: calc((100vw - @maxContentWidth) / 2);
+    box-shadow: 0 0 7px 1px #ccc;
   }
 }
