bug no scrolling to view fixed
also this bug was adding scroll bar when user was solving flashcards

--- a/src/Frontend/src/components/course/Course/Course.less
+++ b/src/Frontend/src/components/course/Course/Course.less
@@ -6,8 +6,7 @@
 @maxPageWrapperWidth: calc(@maxContentWidth - @maxNavigationMenuWidth);
 
 .rootWrapper {
-  height: calc(100vh - 50px);
-  overflow: auto;
+  min-height: calc(100vh - 50px);
 }
 
 .root {
