Added width unset to override bootsrap.min.css medias

--- a/src/uLearn.Web/Content/main.css
+++ b/src/uLearn.Web/Content/main.css
@@ -11,6 +11,7 @@ body.without-topbar {
 .legacy-page .body-content {
     padding-left: 15px;
     padding-right: 15px;
+	width: unset;
 }
 
 .legacy-page {
