Packed terms to terms-container,added terms container to selector with max-width

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -269,6 +269,7 @@
 }
 
 .legacy-page .slide-container .container,
+.legacy-page .terms-container .container,
 .legacy-page .main-page .container {
 	max-width: 864px;
 }
