--- a/src/uLearn.Web/Views/Home/Terms.cshtml
+++ b/src/uLearn.Web/Views/Home/Terms.cshtml
@@ -2,18 +2,20 @@
 	ViewBag.Title = "Условия использования";
 }
 
-<div class="container body-content">
-	<h2>Условия использования</h2>
+<div class="terms-container">
+	<div class="container body-content">
+		<h2>Условия использования</h2>
 
-	<p>
-		Материалы корпоративного портала ЗАО "ПФ "СКБ Контур" &mdash; Ulearn доступны по лицензии <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.
-		Использование любых материалов Ulearn будет считаться принятием условий указанной лицензии.
-	</p>
+		<p>
+			Материалы корпоративного портала ЗАО "ПФ "СКБ Контур" &mdash; Ulearn доступны по лицензии <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.
+			Использование любых материалов Ulearn будет считаться принятием условий указанной лицензии.
+		</p>
 
-	<p>
-		Данные, предоставляемые пользователями (такие как имя, фамилия, электронная почта, ссылка на профиль в социальной сети и IP-адреса),
-		фиксируются и обрабатываются ЗАО "ПФ "СКБ Контур": систематизируются, хранятся, уточняются, но не передаются третьим лицам.
-		Согласие на эти операции выдается пользователем на неопределенный срок, не требует периодического подтверждения и может быть отозвано в порядке,
-		предусмотренном действующим законодательством РФ.
-	</p>
+		<p>
+			Данные, предоставляемые пользователями (такие как имя, фамилия, электронная почта, ссылка на профиль в социальной сети и IP-адреса),
+			фиксируются и обрабатываются ЗАО "ПФ "СКБ Контур": систематизируются, хранятся, уточняются, но не передаются третьим лицам.
+			Согласие на эти операции выдается пользователем на неопределенный срок, не требует периодического подтверждения и может быть отозвано в порядке,
+			предусмотренном действующим законодательством РФ.
+		</p>
+	</div>
 </div>
