--- a/src/Frontend/src/components/comments/Comment/Comment.less
+++ b/src/Frontend/src/components/comments/Comment/Comment.less
@@ -5,7 +5,6 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  word-wrap: break-word;
   border-radius: 4px;
 }
 
@@ -14,9 +13,9 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  width: calc(100% - 50px);
+  width: inherit;
   margin-left: 10px;
-  word-wrap: break-word;
+  overflow: hidden;
 }
 
 .timeSinceAdded {
