Added correct margins to comments, alose added cursor: pointer to group mark in comments

--- a/src/Frontend/src/components/comments/Comment/Marks/Marks.less
+++ b/src/Frontend/src/components/comments/Comment/Marks/Marks.less
@@ -76,6 +76,10 @@
   border-radius: 3px;
 }
 
+.groupMarkOnPhone:hover {
+  cursor: pointer;
+}
+
 .text {
   margin-left: 4px;
   letter-spacing: 0.2px;
