--- a/src/uLearn.Web/Views/Admin/CheckingQueue.cshtml
+++ b/src/uLearn.Web/Views/Admin/CheckingQueue.cshtml
@@ -102,6 +102,8 @@
 								var solution = checkingModel.ContextExerciseSolution;
 								var startPosition = solution.FindPositionByLineAndCharacter(review.StartLine, review.StartPosition);
 								var finishPosition = solution.FindPositionByLineAndCharacter(review.FinishLine, review.FinishPosition);
+								var length = finishPosition - startPosition;
+								if (solution.Length == 0 || length < 0) {continue;}
 								<div>
 									<span class="commented-code">@solution.Substring(startPosition, finishPosition - startPosition).TruncateWithEllipsis(30)</span>
 									@Html.Raw(review.Comment.HtmlEncode().RenderSimpleMarkdown())
