ULEARN-307 Do not show stat for instructors on Ведомость модуля

--- a/src/uLearn.Web/Views/Analytics/UnitStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/UnitStatistics.cshtml
@@ -98,106 +98,109 @@
 	</div>
 }
 
-<div class="row">
-	<div class="col-xs-12 col-md-6">
-		<h2 class="internal-page-menu">
-			Слайды
-			<a href="#statistics" class="internal-page-link visible-xs-inline">Статистика</a>
-			<a href="#students" class="internal-page-link visible-xs-inline">Студенты</a>
-		</h2>
-		<div class="small-table__title">
-			<span class="navbar-label navbar-label-link glyphicon glyphicon-none"></span>
-			<span class="small-table__title__cell">слайд</span>
-			<div class="pull-right">
-				<span class="stat-title small-table__title__cell">просмотры</span>
-				<span class="stat-title small-table__title__cell"></span>
-			</div>
-		</div>
-		@foreach (var slide in Model.Slides)
-		{
-			<div>
-				@if (slide is QuizSlide)
-				{
-					<span class="navbar-label navbar-label-link glyphicon glyphicon-pushpin"></span>
-				}
-				else if (slide is ExerciseSlide)
-				{
-					<span class="navbar-label navbar-label-link glyphicon glyphicon-edit"></span>
-				}
-				else
-				{
-					<span class="navbar-label navbar-label-link glyphicon glyphicon-none"></span>
-				}
-
-				@Html.RouteLink(slide.Title.TruncateWithEllipsis(35), "Course.SlideById", new { Model.Course.Id, SlideId = slide.Url }, new { })
+@if (Model.UnitStatSectionModel != null)
+{
+	<div class="row">
+		<div class="col-xs-12 col-md-6">
+			<h2 class="internal-page-menu">
+				Слайды
+				<a href="#statistics" class="internal-page-link visible-xs-inline">Статистика</a>
+				<a href="#students" class="internal-page-link visible-xs-inline">Студенты</a>
+			</h2>
+			<div class="small-table__title">
+				<span class="navbar-label navbar-label-link glyphicon glyphicon-none"></span>
+				<span class="small-table__title__cell">слайд</span>
 				<div class="pull-right">
-					<span class="slide-visits-count">
-						@Model.SlidesVisits.GetOrDefault(slide.Id, new List<Visit>()).Count
-					</span>
-
+					<span class="stat-title small-table__title__cell">просмотры</span>
+					<span class="stat-title small-table__title__cell"></span>
+				</div>
+			</div>
+			@foreach (var slide in Model.Slides)
+			{
+				<div>
 					@if (slide is QuizSlide)
 					{
-						var average = Model.QuizzesAverageScore[slide.Id];
-						if (average < 0)
-						{
-							<span class="quiz-average">&ndash;</span>
-						}
-						else
-						{
-							<span class="quiz-average" title="Средний процент полученных баллов">@average%</span>
-						}
+						<span class="navbar-label navbar-label-link glyphicon glyphicon-pushpin"></span>
 					}
 					else if (slide is ExerciseSlide)
 					{
-						var tries = Model.ExercisesSolutionsCount.GetOrDefault(slide.Id, 0);
-						var acceptedTries = Model.ExercisesAcceptedSolutionsCount.GetOrDefault(slide.Id, 0);
-						if (tries == 0)
-						{
-							<span class="exercise-tries" title="Нет попыток">&ndash;</span>
-						}
-						else
-						{
-							var acceptedPercent = acceptedTries * 100 / tries;
-							<span class="exercise-tries" title="Успешных попыток: @acceptedTries/@tries">@acceptedPercent%</span>
-						}
+						<span class="navbar-label navbar-label-link glyphicon glyphicon-edit"></span>
 					}
 					else
 					{
-						<span class="lesson-slide-no-stat"></span>
+						<span class="navbar-label navbar-label-link glyphicon glyphicon-none"></span>
 					}
+
+					@Html.RouteLink(slide.Title.TruncateWithEllipsis(35), "Course.SlideById", new { Model.Course.Id, SlideId = slide.Url }, new { })
+					<div class="pull-right">
+						<span class="slide-visits-count">
+							@Model.SlidesVisits.GetOrDefault(slide.Id, new List<Visit>()).Count
+						</span>
+
+						@if (slide is QuizSlide)
+						{
+							var average = Model.UnitStatSectionModel.QuizzesAverageScore[slide.Id];
+							if (average < 0)
+							{
+								<span class="quiz-average">&ndash;</span>
+							}
+							else
+							{
+								<span class="quiz-average" title="Средний процент полученных баллов">@average%</span>
+							}
+						}
+						else if (slide is ExerciseSlide)
+						{
+							var tries = Model.UnitStatSectionModel.ExercisesSolutionsCount.GetOrDefault(slide.Id, 0);
+							var acceptedTries = Model.UnitStatSectionModel.ExercisesAcceptedSolutionsCount.GetOrDefault(slide.Id, 0);
+							if (tries == 0)
+							{
+								<span class="exercise-tries" title="Нет попыток">&ndash;</span>
+							}
+							else
+							{
+								var acceptedPercent = acceptedTries * 100 / tries;
+								<span class="exercise-tries" title="Успешных попыток: @acceptedTries/@tries">@acceptedPercent%</span>
+							}
+						}
+						else
+						{
+							<span class="lesson-slide-no-stat"></span>
+						}
+					</div>
 				</div>
+			}
+		</div>
+
+		<div class="col-xs-12 col-md-6" id="statistics">
+			<h2>Статистика</h2>
+			<div>
+				Посмотрели весь модуль <strong>за&nbsp;выбранный период</strong>: <strong>@Model.UnitStatSectionModel.UsersVisitedAllSlidesInPeriodCount</strong>
 			</div>
-		}
-	</div>
 
-	<div class="col-xs-12 col-md-6" id="statistics">
-		<h2>Статистика</h2>
-		<div>
-			Посмотрели весь модуль <strong>за&nbsp;выбранный период</strong>: <strong>@Model.UsersVisitedAllSlidesInPeriodCount</strong>
+			<div class="vspace-20"></div>
+
+			@{
+				var usersByCountVisitedSlides = Model.VisitedSlidesCountByUser
+					.GroupBy(p => p.Value, p => p.Key)
+					.ToDictionary(g => g.Key, g => g.Count());
+				var usersByCountVisitedSlidesAllTime = Model.VisitedSlidesCountByUserAllTime
+					.GroupBy(p => p.Value, p => p.Key)
+					.ToDictionary(g => g.Key, g => g.Count());
+			}
+			@UsersByCountVisitedSlidesTable("usersByCountVisitedSlides", usersByCountVisitedSlides)
+			@UsersByCountVisitedSlidesTable("usersByCountVisitedSlidesAllTime", usersByCountVisitedSlidesAllTime)
+
+			<div class="analytics__chart__toggles">
+				Показать график:
+				<a href="#usersByCountVisitedSlides" class="analytics__chart__toggle internal-page-link active">за&nbsp;выбранный период</a>
+				<a href="#usersByCountVisitedSlidesAllTime" class="analytics__chart__toggle internal-page-link">за&nbsp;всё время</a>
+			</div>
+
+			<div id="usersByCountVisitedSlidesChart"></div>
 		</div>
-
-		<div class="vspace-20"></div>
-
-		@{
-			var usersByCountVisitedSlides = Model.VisitedSlidesCountByUser
-				.GroupBy(p => p.Value, p => p.Key)
-				.ToDictionary(g => g.Key, g => g.Count());
-			var usersByCountVisitedSlidesAllTime = Model.VisitedSlidesCountByUserAllTime
-				.GroupBy(p => p.Value, p => p.Key)
-				.ToDictionary(g => g.Key, g => g.Count());
-		}
-		@UsersByCountVisitedSlidesTable("usersByCountVisitedSlides", usersByCountVisitedSlides)
-		@UsersByCountVisitedSlidesTable("usersByCountVisitedSlidesAllTime", usersByCountVisitedSlidesAllTime)
-
-		<div class="analytics__chart__toggles">
-			Показать график:
-			<a href="#usersByCountVisitedSlides" class="analytics__chart__toggle internal-page-link active">за&nbsp;выбранный период</a>
-			<a href="#usersByCountVisitedSlidesAllTime" class="analytics__chart__toggle internal-page-link">за&nbsp;всё время</a>
-		</div>
-
-		<div id="usersByCountVisitedSlidesChart"></div>
 	</div>
-</div>
+}
 
 <div class="vspace-20 hidden-xs hidden-sm"></div>
 
