--- a/src/uLearn.Web/Views/Admin/Packages.cshtml
+++ b/src/uLearn.Web/Views/Admin/Packages.cshtml
@@ -126,41 +126,39 @@
 			@foreach (var version in Model.Versions)
 			{
 				var isCurrentVersion = Model.PublishedVersion != null && version.Id == Model.PublishedVersion.Id;
-				<a href="@Url.Action("Diagnostics", new { courseId = Model.Course.Id, versionId = version.Id })" class="no-underline @(isCurrentVersion ? "current" : "")">
-					<div class="courses-versions__version @(isCurrentVersion ? "current" : "")">
-						@if (isCurrentVersion)
+				var href = Url.Action("Diagnostics", new { courseId = Model.Course.Id, versionId = version.Id });
+				<div onclick="if(arguments[0].target === this) location.href='@href';" class="courses-versions__version @(isCurrentVersion ? "current" : "")">
+					@if (isCurrentVersion)
+					{
+						<span class="glyphicon glyphicon-ok" title="Текущая версия"></span>
+					}
+					<b class="courses-versions__author">
+						@version.Author.VisibleName
+					</b>
+						загрузил(а)
+					<b class="courses-versions__time" title="@version.LoadingTime.ToPrettyString()">
+						@version.LoadingTime.ToAgoPrettyString()
+					</b>
+					<div class="courses-versions__actions">
+						@if (version.RepoUrl != null && version.CommitHash != null)
 						{
-							<span class="glyphicon glyphicon-ok" title="Текущая версия"></span>
-						}
-						<div class="courses-versions__author">
-							<b>@version.Author.VisibleName</b>
-							загрузил(а)
-						</div>
-						<div class="courses-versions__time">
-							<b title="@version.LoadingTime.ToPrettyString()">@version.LoadingTime.ToAgoPrettyString()</b>
-						</div>
-
-						<div class="courses-versions__actions">
-							@if (version.RepoUrl != null && version.CommitHash != null)
-							{
-								<a href="@GitUtils.RepoUrlToCommitLink(version.RepoUrl, version.CommitHash)" target="_blank">
-									<span class="glyphicon glyphicon-list-alt"></span>
-								</a>
-							}
-							<a href="@Url.Action("DownloadVersion", new { courseId = Model.Course.Id, versionId = version.Id })">
-								<span class="glyphicon glyphicon-download-alt"></span>
+							<a href="@GitUtils.RepoUrlToCommitLink(version.RepoUrl, version.CommitHash)" target="_blank">
+								<span class="glyphicon glyphicon-list-alt"></span>
 							</a>
-							@if (!isCurrentVersion)
+						}
+						<a href="@Url.Action("DownloadVersion", new { courseId = Model.Course.Id, versionId = version.Id })">
+							<span class="glyphicon glyphicon-download-alt"></span>
+						</a>
+						@if (!isCurrentVersion)
+						{
+							using (Html.BeginForm("DeleteVersion", "Admin", new { courseId = Model.Course.Id, versionId = version.Id }, FormMethod.Post))
 							{
-								using (Html.BeginForm("DeleteVersion", "Admin", new { courseId = Model.Course.Id, versionId = version.Id }, FormMethod.Post))
-								{
-									@Html.Hidden("__RequestVerificationToken")
-									<input type="submit" class="btn btn-xs btn-danger" value="&times;" title="Удалить"/>
-								}
+								@Html.Hidden("__RequestVerificationToken")
+								<input type="submit" class="btn btn-xs btn-danger" value="&times;" title="Удалить"/>
 							}
-						</div>
+						}
 					</div>
-				</a>
+				</div>
 			}
 		</div>
 	}
