--- a/src/Frontend/src/components/common/Error/style.less
+++ b/src/Frontend/src/components/common/Error/style.less
@@ -6,15 +6,20 @@
 }
 
 .image {
-  width: 100%;
+  display: block;
+  width: auto;
   height: auto;
-  margin-top: 40px;
-  margin-bottom: 40px;
-  max-height: 80%;
+  margin: 40px auto;
+  max-width: calc(@maxContentWidth - 300px);
+
+  @media (max-width: @maxLaptopWidth) {
+    margin: 20px auto;
+    max-width: @maxPhoneWidth;
+  }
 
   @media (max-width: @maxPhoneWidth) {
-    margin-top: 0;
-    margin-bottom: 0;
+    margin: 0 auto;
+    max-width: 100%;
   }
 }
 
