--- a/src/uLearn.Web/Views/Home/Index.cshtml
+++ b/src/uLearn.Web/Views/Home/Index.cshtml
@@ -10,6 +10,11 @@
 			<div class="clearfix"></div>
 		</div>
 
+		<div>
+			<a target="_blank" href="https://ulearn.me/Account/JoinGroup?hash=6fed61f8-102d-4923-8cae-5892058eee4b">
+				<img class="big-banner" alt="Стажировка backend C#" src="~/Content/banner-internship-2020.jpg" width="100%"/>
+			</a>
+		</div>
 		<div class="courses-grid">
 			<div class="course-tile">
 				<h2>Основы программирования на примере C#. Часть 1</h2>
