--- a/src/uLearn.Web/Views/Analytics/RatingByPoints.cshtml
+++ b/src/uLearn.Web/Views/Analytics/RatingByPoints.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNet.Identity
+@using uLearn.Web.Extensions
 @model uLearn.Web.Controllers.ExerciseRatingByPointsModel
 
 @{
@@ -20,7 +21,7 @@
 	}
 
 	<h3>Рейтинг@(Model.SelectedGroup == null ? null : $" по группе {Model.SelectedGroup.Name}")</h3>
-
+	<p>Используются очки, полученные за последнее посланное решение.</p>
 	@{
 		var place = 1;
 		<table class="rating-by-points-table">
@@ -28,7 +29,8 @@
 			<tr>
 				<td></td>
 				<td>Имя</td>
-				<td>Оценка</td>
+				<td>Очки</td>
+				<td>Дата</td>
 			</tr>
 			</thead>
 			<tbody>
@@ -41,7 +43,8 @@
 						@(Model.HideOtherUsersNames && User.Identity.GetUserId() != userId ? "***" : Model.Users[userId].VisibleName)
 					</span>
 					</td>
-					<td class="rating-by-points-table__right-cell">@(Model.PointsByUser[userId].ToString("0.##", System.Globalization.CultureInfo.InvariantCulture))</td>
+					<td class="rating-by-points-table__right-cell">@(Model.PointsByUser[userId].Points.ToString("0.##", System.Globalization.CultureInfo.InvariantCulture))</td>
+					<td>@(Model.PointsByUser[userId].Timestamp.ToPrettyString(true))</td>
 				</tr>
 				place++;
 			}
